# cPractices

./: CMakeLists.txt
chapter1_examples/: CMakeLists.txt
chapter1_practices/: CMakeLists.txt
chapter2_examples/: CMakeLists.txt
chapter2_practices/: CMakeLists.txt
chapter3_examples/: CMakeLists.txt
chapter3_practices/: CMakeLists.txt
chapter4_examples/: CMakeLists.txt
chapter4_practices/: CMakeLists.txt
chapter5_examples/: CMakeLists.txt
chapter5_practices/: CMakeLists.txt
chapter6_examples/: CMakeLists.txt
chapter6_practices/: CMakeLists.txt
chapter7_examples/: CMakeLists.txt
chapter7_practices/: CMakeLists.txt
chapter8_examples/: CMakeLists.txt
chapter8_practices/: CMakeLists.txt
chapter9_examples/: CMakeLists.txt
chapter9_practices/: CMakeLists.txt
