cmake_minimum_required(VERSION 3.12.0)
project(cPractices)
set(CMAKE_C_STANDARD_REQUIRED True)

add_subdirectory(chapter1_examples)
add_subdirectory(chapter1_practices)
add_subdirectory(chapter2_examples)
add_subdirectory(chapter2_practices)
add_subdirectory(chapter3_examples)
add_subdirectory(chapter3_practices)
add_subdirectory(chapter4_examples)
add_subdirectory(chapter4_practices)
add_subdirectory(chapter5_examples)
add_subdirectory(chapter5_practices)
add_subdirectory(chapter6_examples)
add_subdirectory(chapter6_practices)
add_subdirectory(chapter7_examples)
add_subdirectory(chapter7_practices)
add_subdirectory(chapter8_examples)
add_subdirectory(chapter8_practices)
add_subdirectory(chapter9_examples)
add_subdirectory(chapter9_practices)