# 添加C源文件并创建可执行目标
add_executable(chap3_example1 example1.c)
add_executable(chap3_example2 example2.c)
add_executable(chap3_example3 example3.c)
add_executable(chap3_example4 example4.c)
add_executable(chap3_example5 example5.c)
add_executable(chap3_example6 example6.c)
add_executable(chap3_example7 example7.c)
#add_executable(chap3_example8 example8.c)
add_executable(chap3_example9 example9.c)
add_executable(chap3_example10 example10.c)
add_executable(chap3_example11 example11.c)
add_executable(chap3_example12 example12.c)
add_executable(chap3_example13 example13.c)
