# 添加C源文件并创建可执行目标
add_executable(chap4_example1 example1.c)
add_executable(chap4_example2 example2.c)
add_executable(chap4_example3 example3.c)
add_executable(chap4_example4 example4.c)
add_executable(chap4_example5 example5.c)
add_executable(chap4_example6 example6.c)
add_executable(chap4_example7 example7.c)
add_executable(chap4_example8 example8.c)
add_executable(chap4_example9 example9.c)
add_executable(chap4_example10 example10.c)
add_executable(chap4_example11 example11.c)
add_executable(chap4_example12 example12.c)
