# 添加C源文件并创建可执行目标
add_executable(chap5_example1 example1.c)
add_executable(chap5_example2 example2.c)
add_executable(chap5_example3 example3.c)
add_executable(chap5_example4 example4.c)
add_executable(chap5_example5 example5.c)
add_executable(chap5_example6 example6.c)
add_executable(chap5_example7 example7.c)
add_executable(chap5_example8 example8.c)
