# 添加C源文件并创建可执行目标
add_executable(chap8_example1 example1.c)
add_executable(chap8_example2 example2.c)
add_executable(chap8_example3 example3.c)
add_executable(chap8_example4 example4.c)
add_executable(chap8_example5 example5.c)
add_executable(chap8_example6 example6.c)
add_executable(chap8_example7 example7.c)
add_executable(chap8_example8 example8.c)
add_executable(chap8_example9 example9.c)
add_executable(chap8_example10 example10.c)
add_executable(chap8_example11 example11.c)
add_executable(chap8_example12 example12.c)
add_executable(chap8_example13 example13.c)
add_executable(chap8_example14 example14.c)
add_executable(chap8_example15 example15.c)
add_executable(chap8_example16 example16.c)
add_executable(chap8_example17 example17.c)
add_executable(chap8_example18 example18.c)
add_executable(chap8_example19 example19.c)
