# 添加C源文件并创建可执行目标
add_executable(chap8_practice1 practice1.c)
add_executable(chap8_practice2 practice2.c)
add_executable(chap8_practice3 practice3.c)
add_executable(chap8_practice4 practice4.c)
add_executable(chap8_practice5 practice5.c)
add_executable(chap8_practice6 practice6.c)
add_executable(chap8_practice7 practice7.c)
