# 添加C源文件并创建可执行目标
add_executable(chap9_practice1 practice1.c)
add_executable(chap9_practice2 practice2.c)
add_executable(chap9_practice3 practice3.c)
add_executable(chap9_practice4 practice4.c)
add_executable(chap9_practice5 practice5.c)
add_executable(chap9_practice6 practice6.c)
add_executable(chap9_practice7 practice7.c)
add_executable(chap9_practice8 practice8.c)
add_executable(chap9_practice9 practice9.c)
add_executable(chap9_practice10 practice10.c)
add_executable(chap9_practice11 practice11.c)
add_executable(chap9_practice12 practice12.c)
add_executable(chap9_practice13 practice13.c)
add_executable(chap9_practice14 practice14.c)
add_executable(chap9_practice15 practice15.c)
add_executable(chap9_practice16 practice16.c)
add_executable(chap9_practice17 practice17.c)
add_executable(chap9_practice18 practice18.c)
add_executable(chap9_practice19 practice19.c)
